frontend/test/should_fail/index_mm_max_edge.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	if { maxEdgeFromIndex(e) in edgesFromIndex(bari); }

	modify {
	}
}
